--- a/buildspec/buildspec.yml
+++ b/buildspec/buildspec.yml
@@ -6,8 +6,8 @@ phases:
       nodejs: latest
   pre_build:
     commands:
-      - npm install
-      - npm update
+   #   - npm install
+    #  - npm update
   build:
     commands:
-       - npm run test:server
+     #  - npm run test:server
